--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/storage": "^2.1.3",
     "angularfire": "^2.3.0",
+    "body-parser": "^1.18.3",
     "cordova-android": "7.0.0",
     "cordova-ios": "4.5.4",
     "cordova-plugin-device": "^2.0.2",
@@ -35,11 +36,15 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "^2.4.0",
+    "dotenv": "^6.0.0",
+    "express": "^4.16.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "moment": "^2.22.2",
     "onesignal-cordova-plugin": "^2.4.4",
+    "pusher": "^2.1.3",
     "rxjs": "5.5.11",
+    "sentiment": "^5.0.1",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
   },
